[gd_scene load_steps=7 format=3 uid="uid://0a54gobsxncr"]

[ext_resource type="Script" path="res://scripts/ui/stage_select.gd" id="1_qkks6"]
[ext_resource type="Theme" uid="uid://bo07iel4au107" path="res://resources/ui_theme.tres" id="1_w24xp"]
[ext_resource type="StyleBox" uid="uid://c3jivr3vykwew" path="res://resources/styleboxes/nine_patch_style_box_texture.tres" id="3_tvhx4"]
[ext_resource type="AudioStream" uid="uid://bbd63jkwur80f" path="res://assets/music/Menu song 2023-11-26 1153.ogg" id="3_xdssx"]
[ext_resource type="Resource" uid="uid://5gothcga34h3" path="res://resources/stage_data/proving_grounds_old.tres" id="4_qihud"]
[ext_resource type="StyleBox" uid="uid://d1fj2wwm4gp0y" path="res://resources/styleboxes/brown_outline_style_box_texture.tres" id="6_ya2ep"]

[node name="StageSelect" type="MarginContainer"]
self_modulate = Color(1, 1, 1, 0.784314)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_w24xp")
script = ExtResource("1_qkks6")
menu_theme = ExtResource("3_xdssx")
post_game_bonus_stage = ExtResource("4_qihud")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
self_modulate = Color(1, 1, 1, 0.882353)
layout_mode = 2
theme_override_styles/panel = ExtResource("3_tvhx4")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.34
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("6_ya2ep")
text = "STAGE SELECT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("6_ya2ep")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="SampleButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Stage1"

[node name="SampleLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Best Time: 20.52"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stage1"

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Best Time: 20.52"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stage1"

[node name="Label3" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Best Time: 20.52"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button4" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stage1"

[node name="Label4" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Best Time: 20.52"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button5" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stage1"

[node name="Label5" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Best Time: 20.52"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button6" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stage1"

[node name="Label6" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Best Time: 20.52"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button7" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stage1"

[node name="Label7" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Best Time: 20.52"
horizontal_alignment = 1
vertical_alignment = 1
